--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
       </main>
       <footer>
         <p>
-          This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
+          This project was edited by
+          <a href="https://github.com/jelenapiha" target="_blank"
+            >Jelena Piha</a
+          >
+          and is <a href="#" target="_blank"> on GitHub</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
