--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
           <a href="https://github.com/jelenapiha" target="_blank"
             >Jelena Piha</a
           >
-          and is <a href="#" target="_blank"> on GitHub</a> and
+          and is
+          <a
+            href="https://github.com/jelenapiha?tab=repositories"
+            target="_blank">
+            on GitHub</a
+          >
+          and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
