replaced link with repository project link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           >
           and is
           <a
-            href="https://github.com/jelenapiha?tab=repositories"
+            href="https://github.com/jelenapiha/Project-homework"
             target="_blank">
             on GitHub</a
           >
